--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <article class="carousel-item active">
                     <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="carousel1">
-                </div>
-                <div class="carousel-item">
+                </article>
+                <article class="carousel-item">
                     <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="carousel2">
-                </div>
-                <div class="carousel-item">
+                </article>
+                <article class="carousel-item">
                     <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="carousel3">
-                </div>
+                </article>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="card px-4 bg-black">
-                        <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="card2" height="150">
                         <div class="card-body bg-info">
                             <p class="card-text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Quia consequuntur asperiores ea ut animi dignissimos.
@@ -163,10 +163,15 @@
                             <h4 class="text-white text-center">VIAJES CHILE</h4>
                         </div>
                         <div class="col-6 text-white text-center fa-3x ">
-                            <i class="fa-brands fa-square-github"></i>
-                            <i class="fa-brands fa-linkedin"></i>
-                            <i class="fa-brands fa-square-twitter"></i>
-                            <i class="fa-brands fa-square-facebook"></i>
+                            <!-- <button id="btnCambiar" class="btn btn-primary">Cambiar el H3</button>-->
+
+                            <button id="github" class="btn btn-light"><i
+                                    class="fa-brands fa-square-github"></i></button>
+                            <button id="linkedin" class="btn btn-light"><i class="fa-brands fa-linkedin"></i></button>
+                            <button id="twitter" class="btn btn-light"><i
+                                    class="fa-brands fa-square-twitter"></i></button>
+                            <button id="facebook" class="btn btn-light"><i
+                                    class="fa-brands fa-square-facebook"></i></button>
                         </div>
                     </div>
                 </div>
@@ -178,6 +183,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
