--- a/index.html
+++ b/index.html
@@ -71,61 +71,54 @@
             <seccion class="mt-1 p-3 d-none d-lg-block bg-black">
                 <div class="container bg-black">
                     <div class="row  align-items-center">
-                        <div class="col-4">
+                        <article class="col-4">
                             <h2 class="bg-info text-white text-center"><i class="fa-solid fa-plane"></i></h2>
                             <p class="text-white text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Aliquid atque quisquam ducimus
                                 nemo provident vel accusamus ad dolorem rem, tempora exercitationem sunt quis temporibus
                                 sequi porro placeat distinctio voluptas! Magni?</p>
-                        </div>
-                        <div class="col-4">
+                        </article>
+                        <article class="col-4">
                             <p class="text-white text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Aliquid atque quisquam ducimus
                                 nemo provident vel accusamus ad dolorem rem, tempora exercitationem sunt quis temporibus
                                 sequi porro placeat distinctio voluptas! Magni?</p>
                             <h2 class="bg-info text-white text-center"> <i class="fa-solid fa-mountain"></i></h2>
-                        </div>
-                        <div class="col-4">
+                        </article>
+                        <article class="col-4">
                             <h2 class="bg-info text-white text-center"> <i class="fa-solid fa-route"></i></h2>
                             <p class="text-white text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Aliquid atque quisquam ducimus
                                 nemo provident vel accusamus ad dolorem rem, tempora exercitationem sunt quis temporibus
                                 sequi porro placeat distinctio voluptas! Magni?</p>
-                        </div>
+                        </article>
                     </div>
                 </div>
             </seccion>
 
+
             <seccion id="destacados">
                 <h3>DESTACADOS</h3>
                 <hr>
-                <div class="card-group m-3 border-color-black ">
-                    <div class="card px-4 bg-black border border-black ">
-                        <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
-                        <div class="card-body bg-info">
+                <div class="container text-center ">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+                        <div class="col"><img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
                             <p class="card-text text-white p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Recusandae distinctio consequatur aut eaque, itaque pariatur?</p>
                         </div>
-                    </div>
-                    <div class="card px-4 bg-black">
-                        <img src="assets/img/card2.jpg" class="card-img-top" alt="card2" height="150">
-                        <div class="card-body bg-info">
+
+                        <div class="col"><img src="assets/img/card2.jpg" class="card-img-top" alt="card2" height="200">
                             <p class="card-text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Quia consequuntur asperiores ea ut animi dignissimos.
                             </p>
                         </div>
-                    </div>
-                    <div class="card px-4 bg-black">
-                        <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
-                        <div class="card-body bg-info">
+
+                        <div class="col"><img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
                             <p class="card-text text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Cumque,
                                 aliquam! Architecto vel hic soluta reprehenderit?</p>
                         </div>
-                    </div>
-                    <div class="card px-4 bg-black">
-                        <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
-                        <div class="card-body bg-info">
+                        <div class="col"><img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
                             <p class="card-text text-white">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This card has even longer content than the first to show that equal
@@ -134,46 +127,47 @@
                         </div>
                     </div>
                 </div>
-            </seccion>
+                </section>
 
-            <seccion id="contacto">
-                <h3>CONTACTO</h3>
-                <hr>
-                <form class="text-white">
-                    <div class="mb-3 px-5">
-                        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1">
-                    </div>
-                    <div class="mb-3 px-5">
-                        <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1">
-                    </div>
-                    <div class="mb-3 px-5">
-                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-info text-white mx-5">Enviar</button>
-                </form>
-            </seccion>
+                <seccion id="contacto">
+                    <h3>CONTACTO</h3>
+                    <hr>
+                    <form class="text-white">
+                        <div class="mb-3 px-5">
+                            <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                        </div>
+                        <div class="mb-3 px-5">
+                            <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                        </div>
+                        <div class="mb-3 px-5">
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-info text-white mx-5">Enviar</button>
+                    </form>
+                </seccion>
 
-            <footer class="bg-info mt-5 p-3 d-none d-lg-block">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-6">
-                            <h4 class="text-white text-center">VIAJES CHILE</h4>
-                        </div>
-                        <div class="col-6 text-white text-center fa-3x ">
-                            <button id="github" class="btn btn-light"><i
-                                    class="fa-brands fa-square-github"></i></button>
-                            <button id="linkedin" class="btn btn-light"><i class="fa-brands fa-linkedin"></i></button>
-                            <button id="twitter" class="btn btn-light"><i
-                                    class="fa-brands fa-square-twitter"></i></button>
-                            <button id="facebook" class="btn btn-light"><i
-                                    class="fa-brands fa-square-facebook"></i></button>
+                <footer class="bg-info mt-5 p-3 d-none d-lg-block">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-6">
+                                <h4 class="text-white text-center">VIAJES CHILE</h4>
+                            </div>
+                            <div class="col-6 text-white text-center fa-3x ">
+                                <button id="github" class="btn btn-light"><i
+                                        class="fa-brands fa-square-github"></i></button>
+                                <button id="linkedin" class="btn btn-light"><i
+                                        class="fa-brands fa-linkedin"></i></button>
+                                <button id="twitter" class="btn btn-light"><i
+                                        class="fa-brands fa-square-twitter"></i></button>
+                                <button id="facebook" class="btn btn-light"><i
+                                        class="fa-brands fa-square-facebook"></i></button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </footer>
+                </footer>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
